--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
 }
 
 dependencies {
+    //Glide
+    implementation "com.github.bumptech.glide:glide:4.12.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.12.0"
 
     //ViewModel Providers
     implementation "androidx.activity:activity-ktx:1.2.3"
@@ -48,6 +51,9 @@ dependencies {
     //Room
     implementation "androidx.room:room-runtime:2.3.0"
     kapt "androidx.room:room-compiler:2.3.0"
+
+    //GSon
+    implementation 'com.google.code.gson:gson:2.8.6'
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
