--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
 
     //ViewModel Providers
     implementation "androidx.activity:activity-ktx:1.2.3"
+    implementation 'androidx.fragment:fragment-ktx:1.3.5'
 
     //Retrofit
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
