--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,9 @@ dependencies {
     //GSon
     implementation 'com.google.code.gson:gson:2.8.6'
 
+    //Zoomy
+    implementation 'com.ablanco.zoomy:zoomy:1.1.0'
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'androidx.appcompat:appcompat:1.3.0'
